--- a/package.json
+++ b/package.json
@@ -10,8 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ant-design/react-native": "^3.3.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/material-bottom-tabs": "^5.1.14",
+    "@react-navigation/material-top-tabs": "^5.1.14",
+    "@react-navigation/native": "^5.2.3",
+    "@react-navigation/stack": "^5.2.18",
+    "@types/styled-components": "^5.1.0",
+    "axios": "^0.19.2",
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-paper": "^3.9.0",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.7.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-tab-view": "^2.14.0",
+    "react-native-vector-icons": "^6.6.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -22,9 +39,11 @@
     "@types/react-native": "^0.62.5",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^24.9.0",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
+    "react-native-iconfont-cli": "^2.0.0",
     "react-test-renderer": "16.11.0",
     "typescript": "^3.8.3"
   },
