--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/stack": "^5.2.18",
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
@@ -28,6 +30,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
+    "rn-placeholder": "^3.0.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
