--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {
     "@ant-design/react-native": "^3.3.0",
+    "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/material-bottom-tabs": "^5.1.14",
     "@react-navigation/material-top-tabs": "^5.1.14",
     "@react-navigation/native": "^5.2.3",
     "@react-navigation/stack": "^5.2.18",
+    "@types/react-redux": "^7.1.8",
+    "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.2.2",
-    "mobx-react-lite": "^2.0.6",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-bootsplash": "^2.2.4",
@@ -34,12 +34,13 @@
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "rn-placeholder": "^3.0.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "@types/jest": "^25.2.1",
