--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/viewpager": "^4.0.0",
     "@react-navigation/material-bottom-tabs": "^5.1.14",
-    "@react-navigation/material-top-tabs": "^5.1.14",
+    "@react-navigation/material-top-tabs": "^5.2.2",
     "@react-navigation/native": "^5.2.3",
     "@react-navigation/stack": "^5.2.18",
     "@types/react-redux": "^7.1.8",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
+    "dayjs": "^1.8.26",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-bootsplash": "^2.2.4",
@@ -49,6 +51,7 @@
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^24.9.0",
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
