--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "isolatedModules": true,
     "jsx": "react",
     "lib": [
-      "es6"
+      "es6", "dom", "es2017"
     ],
     "moduleResolution": "node",
     "noEmit": true,
