--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/material-top-tabs": "^5.2.2",
     "@react-navigation/native": "^5.2.3",
     "@react-navigation/stack": "^5.2.18",
+    "@types/react-native-snap-carousel": "^3.8.1",
     "@types/react-redux": "^7.1.8",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.0",
@@ -35,6 +36,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
+    "react-native-snap-carousel": "^3.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
