消息页面完成

--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@ant-design/react-native": "^3.3.0",
     "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "^0.1.10",
@@ -20,6 +19,7 @@
     "@types/react-native-snap-carousel": "^3.8.1",
     "@types/react-redux": "^7.1.8",
     "@types/redux": "^3.6.0",
+    "@types/socket.io-client": "^1.4.33",
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
     "dayjs": "^1.8.26",
@@ -44,6 +44,7 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "rn-placeholder": "^3.0.0",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
