--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-waterflow-list": "^1.1.0",
     "react-native-webview": "^9.4.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
